--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@ body {
   @apply bg-white rounded-lg p-6 mt-[3rem];
 }
 .feedback {
-  @apply bg-white rounded-lg p-6 mt-[3rem];
+  @apply bg-white rounded-lg p-6 mt-4;
 }
 p {
   @apply text-darkgray;
@@ -23,4 +23,13 @@ p {
 .mobile-top-nav {
   background: linear-gradient(125deg, #4C9FF0, #AC3BE5, #CA49AE, #E98987);
   @apply px-4 py-2 text-white;
+}
+.button-hollow-black {
+  border: 2px solid #373e68;
+  border-radius:.5rem;
+  padding-inline: 1rem;
+  padding-block: .5rem
+}
+.button-hollow-black:hover {
+  @apply bg-darkblue text-white ;
 }
