--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,6 +48,15 @@ p {
   @apply outline-none focus:outline-none border-none bg-transparent h-full min-w-[80%];
 }
 
+/* For the tailspin animation */
+[data-testid="tail-spin-loading"] {
+  position: absolute;
+  right: 0;
+  top: 0;
+  @apply translate-y-[50%];
+
+}
+
 
 /* .auth-page input {
   @apply w-full my-2 md:my-6 p-2 md:p-4 bg-lightgray outline-none focus:outline-none border-none rounded;
